--- a/rk.html
+++ b/rk.html
@@ -72,7 +72,7 @@
             <a class="ok" href="http://ok.ru/roscosmos"><span></span></a>
         </div></div></div><div class="startvideo">
                 
-            <video poster="/im/rocket_up_1.jpg"><source src="/im/rocket_up_1280.mp4" type="video/mp4" /></video><span class="upp_"></span>            
+            <video poster="/im/rocket_up_1.jpg" autoplay="autoplay" preload="auto"><source src="/im/rocket_up_1280.mp4" type="video/mp4" /></video><span class="upp_"></span>            
             
             <script>
                 $(function(){
